src/styles/global.css
/* =========================== */
/* GLOBAL STYLES */
/* =========================== */
html {
  scroll-behavior: smooth;
}

/* =========================== */
/* CAROUSAL STYLES */
/* =========================== */

:root[data-theme='dark'] .slick-dots {
  filter: invert(1);
}
.about__ourTeamSliderWrapper .slick-slider {
  height: 550px;
}
.slick-center .teamMember__about {
  display: block;
}
.slick-center .teamMember__image {
  width: 200px;
  height: 200px;
  margin-top: 0;
}
@media only screen and (max-width: 820px) {
  .teamMember__about {
    display: block !important;
  }
}

/* =========================== */
/* CUSTOM WIKI WIDGETS STYLES */
/* =========================== */

.embed-widget-iframe {
  display: grid;
  place-items: center;
  width: 100%;
  margin: 10px 0;
  position: relative;
  box-sizing: border-box;
}
.embed-widget-iframe iframe {
  border-radius: 4px;
  width: 70%;
  aspect-ratio: 16 / 9;
  z-index: 1;
}

.embed-widget-iframe:not(.embed-widget-iframe__loaded) {
  background-color: #00000010;
}

@media screen and (max-width: 900px) {
  .embed-widget-iframe iframe {
    width: 100%;
  }
}
.embed-widget-iframe:not(.embed-widget-iframe__loaded)::before {
  content: 'loading...';
  display: block;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  color: gray;
  animation: blink 1.2s linear infinite;
}
@keyframes blink {
  0% {
    opacity: 0;
  }
  50% {
    opacity: 0.5;
  }
  100% {
    opacity: 0;
  }
}

/* =========================== */
/* EDITOR PLUGIN CONTENT STYLES */
/* =========================== */

.toastui-editor-defaultUI * {
  font-family: var(--montserrat-font), sans-serif !important;
}

/* =========================== */
/* EDITOR SHELL STYLES */
/* =========================== */
.ProseMirror,
.toastui-editor-contents {
  font-size: 16px !important;
}
.toastui-editor-defaultUI .toastui-editor-md-tab-container {
  border-color: #00000010 !important;
}
.toastui-editor-dark .toastui-editor-md-container,
.toastui-editor-dark .toastui-editor-ww-container,
.toastui-editor-dark .toastui-editor-defaultUI-toolbar,
.toastui-editor-dark .toastui-editor-md-tab-container,
.toastui-editor-dark .toastui-editor-ww-tab-container {
  background: transparent !important;
}
.toastui-editor-dark .toastui-editor-toolbar,
.toastui-editor-dark .toastui-editor-mode-switch {
  background-color: #212836 !important;
}
.toastui-editor-dark .tab-item {
  background-color: #202634 !important;
}
.toastui-editor-dark .tab-item.active {
  background-color: #2b3447 !important;
  border-color: inherit !important;
}
.toastui-editor-toolbar {
  border-top-left-radius: 4px !important;
  border-top-right-radius: 4px !important;
}
.toastui-editor-dark .toastui-editor-popup-body,
.toastui-editor-dark .toastui-editor-popup,
.toastui-editor-dark .toastui-editor-context-menu {
  background-color: #1c212c !important;
}
.toastui-editor-dark .toastui-editor-popup-body {
  overflow-y: scroll;
}
.toastui-editor-dark .toastui-editor-toolbar-icons {
  border-color: transparent !important;
}
.toastui-editor-dark .toastui-editor-toolbar-icons:not(:disabled):hover {
  background-color: #2b3447 !important;
  border-color: inherit !important;
}

.toastui-editor-custom-toolbar-icon:not(:disabled):hover {
  outline: 1px solid #e4e7ee !important;
  background-color: #fff !important;
}
.toastui-editor-dark .toastui-editor-custom-toolbar-icon:not(:disabled):hover {
  background-color: #2b3447 !important;
  outline: 1px solid #cccccc2a !important;
}
.toastui-editor-toolbar-item-wrapper {
  margin: 0 !important;
}

/* =========================== */
/* EDITOR TOOLBAR STYLES */
/* =========================== */
.toastui-editor-defaultUI-toolbar {
  padding-left: 7px !important;
}
.toastui-editor-custom-toolbar-icon {
  background-repeat: no-repeat;
  background-position: center;
  background-size: 60%;
  display: inline-block;
  vertical-align: middle;
  background-clip: content-box;
  border: none !important;
}
.redo__toolbarBtn {
  background-image: url(/images/editor-toolbar/redo-icon.png) !important;
  background-repeat: no-repeat;
  background-position: center;
  background-size: 60%;
  display: inline-block;
  vertical-align: middle;
  background-clip: content-box;
  border: none !important;
}
.toastui-editor-dark .redo__toolbarBtn {
  background-image: url(/images/editor-toolbar/redo-icon-dark.png) !important;
}

.undo__toolbarBtn {
  background-image: url(/images/editor-toolbar/undo-icon.png) !important;
}
.toastui-editor-dark .undo__toolbarBtn {
  background-image: url(/images/editor-toolbar/undo-icon-dark.png) !important;
}
.toastui-editor-ok-button {
  background-color: #ec67a8 !important;
}

/* =========================== */
/* EDITOR CONTENT STYLES */
/* =========================== */

/* WYSIWYG MODE STYLES */
.toastui-editor-contents * {
  font-family: var(--montserrat-font), sans-serif !important;
}
.toastui-editor-contents :where(h1, h2, h3, h4, h5, h6) {
  border-bottom: none !important;
  padding-bottom: 0 !important;
  margin: 16px 0 !important;
  font-weight: 600;
  line-height: 1.25;
  scroll-margin-top: 80px;
}
.toastui-editor-contents :where(h1, h2) {
  font-weight: 500 !important;
}
.toastui-editor-contents h1 {
  margin: 0.6em 0 !important;
  font-size: 1.7em !important;
}
:where(.toastui-editor-contents h4) {
  font-size: 16px;
}
.toastui-editor-contents ul {
  list-style-type: disc !important;
}
.toastui-editor-contents li {
  list-style-type: unset !important;
}
.toastui-editor-contents ul > li::before {
  height: 0 !important;
  width: 0 !important;
}

.toastui-editor-contents a {
  color: #ec67a8 !important;
}
html[data-theme='dark'],
.toastui-editor-contents a {
  color: #ea3b87 !important;
}
.toastui-editor-contents .toastui-editor-contents blockquote {
  color: #57606a !important;
  border-left: 0.25em solid #d0d7de !important;
}
.toastui-editor-dark .toastui-editor-contents blockquote {
  color: #a9b6c5 !important;
  border-left: 0.25em solid #4c5566 !important;
}
.toastui-editor-contents blockquote > p {
  color: inherit !important;
}

/* MARKDOWN MODE STYLES */
.md-mode :where(div) {
  font-weight: 400 !important;
  font-family: var(--montserrat-font), sans-serif !important;
}
.toastui-editor-md-heading {
  font-weight: 600 !important;
  font-family: var(--montserrat-font), sans-serif !important;
}

/* =========================== */
/* WIKI MEDIA SHOWCASE STYLES */
/* =========================== */

#bp_container > .bp-x {
  justify-content: center;
  align-items: center;
  display: flex;
}

#bp_container .bp-xc {
  left: 0% !important;
  bottom: 0% !important;
  height: 100% !important;
  padding: 9px 20px 7px !important;
  background: #ffffff33 !important;
  border-radius: 0 !important;
}

#bp_caption {
  overflow: hidden;
  width: fit-content;
  padding: 0.8em !important;
  background: #2b313bd8 !important;
  padding-left: 40px;
  margin: 0 auto !important;
  margin-bottom: 20px !important;
  border-radius: 12px !important;
}
#bp_caption span {
  margin-left: 60px;
}

/* =========================== */
/* CHAKRA UI STYLE FIXES */
/* =========================== */
.chakra-popover__popper {
  z-index: 999 !important;
}

